--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "core-js": "^3.8.3",
+    "tailwindcss": "3.4.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1",
     "vuex": "^4.0.2"
@@ -21,8 +22,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.8",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6"
   },
   "eslintConfig": {
     "root": true,
